<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp">

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="" 
        android:hint="@string/from"
        android:nextFocusDown="@+id/autoCompleteTextView2">

        <requestFocus />
    </AutoCompleteTextView>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="" 
        android:hint="@string/to"
        android:nextFocusDown="@+id/editText1"/>
<LinearLayout android:id="@+id/calender" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:visibility="invisible">
<EditText
android:id="@+id/editText1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="20dp"
android:ems="10"
android:inputType="date" 
style="@style/textbuttonendstyle"
android:nextFocusDown="@+id/spinner">


</EditText>
<ImageButton
android:id="@+id/imageButton1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="20dp"
android:contentDescription="@string/calender"
android:cropToPadding="true"
android:onClick="selectDate"
android:src="@drawable/icon_calendar" />
</LinearLayout>

<TextView
    android:id="@+id/textView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:text="@string/coach_prompt"
    android:visibility="gone" />

<LinearLayout android:id="@+id/coach" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:visibility="gone">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/coach_array"
        android:prompt="@string/coach_prompt"
        android:spinnerMode="dropdown"
        android:visibility="gone" />

</LinearLayout>
<LinearLayout android:id="@+id/ok" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="30dp">

<Button
    android:id="@+id/button1"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_button"
    android:text="@string/ok"
    android:textColor="@color/white"
    android:textStyle="bold" />

</LinearLayout>
</LinearLayout>

