<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
   
   <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal"
       android:layout_marginTop="50dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/book_ticket"
            android:textColor="@color/white"
            android:textStyle="bold" />

   </LinearLayout>
   <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal"
       android:layout_marginTop="15dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/cancel_ticket"
            android:textColor="@color/white"
            android:textStyle="bold" />

   </LinearLayout>
   <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal"
       android:layout_marginTop="15dp">

     <Button
         android:id="@+id/button3"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_button"
         android:text="@string/booking_history"
         android:textColor="@color/white"
         android:textStyle="bold" />
   
   </LinearLayout>
<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal"
    android:layout_marginTop="15dp">

  <Button
      android:id="@+id/button4"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:background="@drawable/rounded_button"
      android:text="@string/logout"
      android:textColor="@color/white"
      android:textStyle="bold" />

</LinearLayout>

<ProgressBar
    android:id="@+id/progressBar1"
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_gravity="center_horizontal"
        android:visibility="invisible"/>

</LinearLayout>